--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,3 @@
 body {
-    background: url(/images/pattern-background-desktop.svg) no-repeat #dae8fb;
+    background: url(/images/pattern-background-desktop.svg) repeat-x #dae8fb;
 }
