--- a/css/master.css
+++ b/css/master.css
@@ -2,6 +2,13 @@
 
 body {
     background: url(/images/pattern-background-desktop.svg) repeat-x #dae8fb;
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 500;
+    text-align: center;
+}
+
+.plan-title {
+    font-weight: 700;
 }
 
 .summary-main {
@@ -9,5 +16,5 @@ body {
 }
 
 .summary-title {
-    
+    font-weight: 900;
 }
