corrected position of summary-main form

--- a/css/master.css
+++ b/css/master.css
@@ -13,6 +13,9 @@ body {
 
 .summary-main {
     background-color: hsl(225, 100%, 98%);
+    width: 30%;
+    align-self: center;
+    margin: 5% auto 0;
 }
 
 .summary-title {
