corrected form width

--- a/css/master.css
+++ b/css/master.css
@@ -13,7 +13,7 @@ body {
 
 .summary-main {
     background-color: hsl(225, 100%, 98%);
-    width: 30%;
+    width: 350px;
     align-self: center;
     margin: 5% auto 0;
 }
