--- a/css/master.css
+++ b/css/master.css
@@ -14,6 +14,7 @@
 
     .hero-img {
         width: 100%;
+        border-radius: 15px 15px 0 0;
     }
 
     .summary-main {
@@ -21,6 +22,7 @@
         width: 350px;
         align-self: center;
         margin: 5% auto 0;
+        border-radius: 15px;
     }
 
     .summary-title {
