added padding to text content of the form

--- a/css/master.css
+++ b/css/master.css
@@ -25,6 +25,10 @@
         border-radius: 15px;
     }
 
+    .summary-text {
+        padding: 0 40px 30px;
+    }
+
     .summary-title {
         font-weight: 900;
     }
