changed bg color of form

--- a/css/master.css
+++ b/css/master.css
@@ -17,7 +17,7 @@ body {
 }
 
 .summary-main {
-    background-color: hsl(225, 100%, 98%);
+    background-color: #ffffff;
     width: 350px;
     align-self: center;
     margin: 5% auto 0;
