--- a/css/master.css
+++ b/css/master.css
@@ -58,3 +58,47 @@ body {
 .summary-title {
     font-weight: 900;
 }
+
+.pay-btn {
+    width: 90%;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    color: #FFFFFF;
+    padding: 5%;
+    margin: 5% auto;
+    background-color: #3829E0;
+    -webkit-box-shadow: 0 24px 40px 0 #d1d0e0;
+    -moz-box-shadow: 0 24px 40px 0 #d1d0e0;
+    box-shadow: 0 24px 40px 0 #d1d0e0;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+ }
+ 
+ .pay-btn:hover {
+    background: #3829E0;
+    background-image: -webkit-linear-gradient(top, #3829E0, #5447E9);
+    background-image: -moz-linear-gradient(top, #3829E0, #5447E9);
+    background-image: -ms-linear-gradient(top, #3829E0, #5447E9);
+    background-image: -o-linear-gradient(top, #3829E0, #5447E9);
+    background-image: -webkit-gradient(to bottom, #3829E0, #5447E9);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    text-decoration: none;
+ }
+
+ .pay-btn:active {
+    background: hsl(223, 47%, 23%);
+    background-image: -webkit-linear-gradient(top, hsl(223, 47%, 23%), #5447E9);
+    background-image: -moz-linear-gradient(top, hsl(223, 47%, 23%), #5447E9);
+    background-image: -ms-linear-gradient(top, hsl(223, 47%, 23%), #5447E9);
+    background-image: -o-linear-gradient(top, hsl(223, 47%, 23%), #5447E9);
+    background-image: -webkit-gradient(to bottom, hsl(223, 47%, 23%), #5447E9);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    text-decoration: none;
+ }
