--- a/css/master.css
+++ b/css/master.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Red Hat Display', sans-serif;
     font-weight: 500;
     text-align: center;
+    color: hsl(224, 23%, 55%);
 }
 
 a {
@@ -25,6 +26,7 @@ a {
 
 .plan-title {
     font-weight: 700;
+    color: black;
 }
 
 .hero-img {
@@ -73,6 +75,7 @@ a {
 
 .summary-title {
     font-weight: 900;
+    color: black;
 }
 
 .pay-btn {
